src/objects/Specialist__c.object
<CustomObject>
    <description>This object will store available Specialists available for selection on Patient Referrals.</description>
    <fields>
        <fullName>Accepted_Insurance__c</fullName>
        <label>Accepted Insurance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Aetna Choice POS II</fullName>
                </value>
                <value>
                    <fullName>Aetna HMO</fullName>
                </value>
                <value>
                    <fullName>Aetna POS</fullName>
                </value>
                <value>
                    <fullName>Aetna POS II</fullName>
                </value>
                <value>
                    <fullName>Aetna PPO</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Anthem (NTN)</fullName>
                </value>
                <value>
                    <fullName>Anthem Blue Cross</fullName>
                </value>
                <value>
                    <fullName>Anthem Blue Cross Blue Shield</fullName>
                </value>
                <value>
                    <fullName>Anthem Blue Cross of California</fullName>
                </value>
                <value>
                    <fullName>Anthem Cal Medi-Connect</fullName>
                </value>
                <value>
                    <fullName>Blue Cross</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield EPO</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield PPO</fullName>
                </value>
                <value>
                    <fullName>Blue Cross HMO</fullName>
                </value>
                <value>
                    <fullName>Blue Cross POS</fullName>
                </value>
                <value>
                    <fullName>Blue Cross PPO</fullName>
                </value>
                <value>
                    <fullName>Blue Shield</fullName>
                </value>
                <value>
                    <fullName>Blue Shield covered California Humana</fullName>
                </value>
                <value>
                    <fullName>Blue Shield HMO</fullName>
                </value>
                <value>
                    <fullName>Blue Shield PPO</fullName>
                </value>
                <value>
                    <fullName>Cardinal Care (Stanford students)</fullName>
                </value>
                <value>
                    <fullName>Carpenter</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Cigna/Great West HMO</fullName>
                </value>
                <value>
                    <fullName>Cigna/Great West PPO</fullName>
                </value>
                <value>
                    <fullName>Cigna PPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COVID_19_Update__c</fullName>
        <label>COVID-19 Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Preference__c</fullName>
        <label>Call Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Contact__c</fullName>
        <label>Direct Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Snippet__c</fullName>
        <formula>Group_Location__r.Name&amp;BR()&amp;
Name &amp;BR()&amp;
&quot;Address: &quot;&amp;Street__c &amp;&quot;, &quot;&amp;City__c &amp;&quot;, &quot;&amp; State__c &amp;&quot; &quot;&amp; Zip__c &amp;BR()&amp; 
&quot;Phone: &quot;&amp; Phone__c &amp;BR()&amp;
&quot;Hours: &quot;&amp;BR()&amp; Hours__c &amp;BR()&amp;
&quot;Website: &quot;&amp; Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Snippet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Group_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Specialists</relationshipLabel>
        <relationshipName>Specialists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Specialists</relationshipLabel>
        <relationshipName>Specialists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <inlineHelpText>What is the specialist&apos;s NPI number?</inlineHelpText>
        <label>NPI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>35000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Profile_URL__c</fullName>
        <label>Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Referral_Count__c</fullName>
        <label>Referral Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Specialty_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Specialist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Specialist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specialists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>